[tool.poetry]
name = "repl_python3_AutoBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
python-dotenv = "^0.19.1"
pyjokes = "^0.6.0"
Flask = "^2.0.2"
mcstatus = "^6.5.0"
discord = "^1.7.3"
pycord = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
